# perm-backend

./: .gitignore  Dockerfile  README.md  SECURITY_ENHANCEMENTS.md  conftest.py  dol_analytics.db  entrypoint.sh  find_dataset.py  permtimeline.html  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  scraper.py
.github/workflows/: main.yml
src/dol_analytics/: config.py  main.py  setup.py
src/dol_analytics/api/routes/: chatbot.py  data.py  predictions.py
src/dol_analytics/data/: daily_progress.csv  monthly_status.csv  monthly_summary.csv  processing_times.csv  summary_stats.csv  weekly_summary.csv
src/dol_analytics/middleware/: __init__.py  rate_limiter.py
src/dol_analytics/models/: database.py  database_docs.py  schemas.py
src/dol_analytics/services/: chatbot.py  data_processor.py  dol_api.py  prediction.py
src/dol_analytics/tasks/: scheduler.py
tests/: conftest.py  test_config.py  test_database.py  test_predictions.py
